--- a/sobre.html
+++ b/sobre.html
@@ -18,7 +18,7 @@
     <p>Nosso centro de distribuição fica em Jacarezinho, no Paraná. De lá, saem 48 aviões que
         distribuem nossos produtos às casas do mundo todo. Nosso centro de distribuição:</p>
     
-    <figure>
+    <figure id="centro-distribuicao">
         <img src="img/centro-distribuicao.png" alt="Foto do centro de distribuição da Mirror Fashion">
         <figcaption>Centro de distribuição da Mirror Fashion</figcaption>
     </figure>
@@ -28,7 +28,7 @@
 
     <h2>História</h2>
 
-    <figure>
+    <figure id="familia-pelho">
         <img src="img/familia-pelho.jpg" alt="Foto da família Pelho">
         <figcaption>Família Pelho</figcaption>
     </figure>
@@ -64,6 +64,10 @@
         <li>Mais de um milhão de funcionários em todo o mundo</li>
     </ul>
 
+    <div id="rodape">
+        <img src="img/logo.png" alt="Logo da Mirror Fashion">
+        &copy; Copyright Mirror Fashion
+    </div>
 </body>
 
 </html>
