--- a/index.html
+++ b/index.html
@@ -3,12 +3,14 @@
 
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width">
     <title>Mirror Fashion</title>
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/estilos.css">
 </head>
 
 <body>
+    
     <header class="container">
         <h1><img src="img/logo.png" alt="Logo da Mirror Fashion"></h1>
         <p class="sacola">
